--- a/slide-control-extension/options.html
+++ b/slide-control-extension/options.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Slidecontrol options</title>
+  </head>
 
-	<head>
-		<title>Slidecontrol options</title>
-	</head>
+  <body>
+    Select WebSocket-server to connect to:
+    <select id="server-options">
+      <option value="wss://www.maniyt.de:61263"
+        >wss://www.maniyt.de:61263</option
+      >
+      <option value="wss://mn.uber.space/slidecontrol-socket"
+        >wss://mn.uber.space/slidecontrol-socket</option
+      >
+    </select>
 
-	<body>
+    <br />Or if you run your server locally:<br />
+    <input
+      aria-label="Or local server"
+      type="text"
+      placeholder="ws://localhost:1337"
+      id="server-local"
+    />
 
-		Select WebSocket-server to connect to:
-		<select id="server-options">
-			<option value="wss://www.maniyt.de:61263">wss://www.maniyt.de:61263</option>
-			<option value="wss://mn.uber.space/slidecontrol-socket">wss://mn.uber.space/slidecontrol-socket</option>
-		</select>
+    <br /><br />
+    Current server: <span id="current-server"></span> <br /><br />
 
-		<br />Or if you run your server locally:<br />
-		<input aria-label="Or local server" type="text" placeholder="ws://localhost:1337" id="server-local" />
+    <div id="status"></div>
+    <button id="save">Save</button>
 
-		<br /><br />
-		Current server: <span id="current-server"></span>
-		<br /><br />
-
-		<div id="status"></div>
-		<button id="save">Save</button>
-
-        <script src="options.js"></script>
-        
-	</body>
-
+    <script src="options.js"></script>
+  </body>
 </html>
